cleaned ratings df and merged with movies df

--- a/Wiki_movies.ipynb
+++ b/Wiki_movies.ipynb
@@ -1632,7 +1632,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "217c8b76",
+   "id": "d4e3d33f",
    "metadata": {},
    "outputs": [
     {
@@ -1654,7 +1654,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "05e24493",
+   "id": "b6f3342f",
    "metadata": {},
    "outputs": [
     {
@@ -1680,7 +1680,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "7a936761",
+   "id": "16b3a904",
    "metadata": {},
    "outputs": [
     {
@@ -1748,7 +1748,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "2619d176",
+   "id": "3c938f89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1759,7 +1759,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "4361a798",
+   "id": "bcdb520e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1769,7 +1769,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "efcb25ef",
+   "id": "b4372809",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1779,7 +1779,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "aa9a9b3f",
+   "id": "c2d5b8c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1789,7 +1789,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "8503bbde",
+   "id": "ee94f73a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1799,7 +1799,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "9c4c7484",
+   "id": "8b31687e",
    "metadata": {},
    "outputs": [
     {
@@ -1905,7 +1905,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "80150436",
+   "id": "a4d008c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1958,7 +1958,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "2b070176",
+   "id": "20837523",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1968,7 +1968,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "b7ee24d8",
+   "id": "48737543",
    "metadata": {},
    "outputs": [
     {
@@ -2000,7 +2000,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "a81071de",
+   "id": "f70c1cfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2010,7 +2010,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "df659d73",
+   "id": "f938c6a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2020,7 +2020,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "1ea69a1e",
+   "id": "e20f4347",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2030,7 +2030,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "5a01c003",
+   "id": "03de75a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2040,7 +2040,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "973c193b",
+   "id": "759a17ca",
    "metadata": {},
    "outputs": [
     {
@@ -2101,7 +2101,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "2b42317e",
+   "id": "4a98a19f",
    "metadata": {},
    "outputs": [
     {
@@ -2169,7 +2169,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "218c587e",
+   "id": "97439417",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2179,7 +2179,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "d5b35266",
+   "id": "473bddb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2189,7 +2189,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "133f347b",
+   "id": "e4e791f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2199,7 +2199,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "238daf23",
+   "id": "6da61145",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2212,7 +2212,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "ba2afc17",
+   "id": "5d047fcc",
    "metadata": {},
    "outputs": [
     {
@@ -2318,7 +2318,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "44dc644c",
+   "id": "0f0cfd99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2328,7 +2328,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "9f415f71",
+   "id": "013f8dac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2338,7 +2338,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "92c0d4e2",
+   "id": "6ea5752c",
    "metadata": {},
    "outputs": [
     {
@@ -2359,7 +2359,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "c0dde33a",
+   "id": "cd5a57c8",
    "metadata": {},
    "outputs": [
     {
@@ -2391,7 +2391,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "4d0c578a",
+   "id": "7d6cd66e",
    "metadata": {},
    "outputs": [
     {
@@ -2412,7 +2412,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "54205311",
+   "id": "297665e2",
    "metadata": {},
    "outputs": [
     {
@@ -2450,7 +2450,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "1d3001d7",
+   "id": "f2134b2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2460,7 +2460,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "557c1e8d",
+   "id": "39954a74",
    "metadata": {},
    "outputs": [
     {
@@ -2590,7 +2590,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "d39a9d4d",
+   "id": "6ce34a5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2600,7 +2600,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "d3ea5f65",
+   "id": "8b804894",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2610,7 +2610,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "b8f6f35e",
+   "id": "31b161a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2620,7 +2620,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "3c8ef1ca",
+   "id": "358714cf",
    "metadata": {},
    "outputs": [
     {
@@ -2665,7 +2665,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "ea5e8b9d",
+   "id": "efa8ea43",
    "metadata": {},
    "outputs": [
     {
@@ -2691,7 +2691,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "441822de",
+   "id": "2fa4dbc5",
    "metadata": {},
    "outputs": [
     {
@@ -2867,7 +2867,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "d212387e",
+   "id": "300f2ef7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2877,7 +2877,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "282f9fb2",
+   "id": "e23f2ef0",
    "metadata": {},
    "outputs": [
     {
@@ -2900,7 +2900,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "dc217506",
+   "id": "5a56cf05",
    "metadata": {},
    "outputs": [
     {
@@ -2932,7 +2932,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "c2ed7199",
+   "id": "7b7c994a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2942,7 +2942,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "167585d2",
+   "id": "d7746612",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2954,7 +2954,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "49a476e4",
+   "id": "8a7c9fbf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2964,7 +2964,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "5a9364c7",
+   "id": "f1fc4e45",
    "metadata": {},
    "outputs": [
     {
@@ -3000,7 +3000,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "66c1ba29",
+   "id": "7b516ff3",
    "metadata": {},
    "outputs": [
     {
@@ -3032,7 +3032,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "b4185c0d",
+   "id": "c5417654",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3042,7 +3042,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "91f64133",
+   "id": "92dea4b4",
    "metadata": {},
    "outputs": [
     {
@@ -3085,7 +3085,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "80676f0b",
+   "id": "f78a7ec1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3095,7 +3095,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "6a5c468d",
+   "id": "21f5d2d6",
    "metadata": {},
    "outputs": [
     {
@@ -3127,7 +3127,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "747b09ec",
+   "id": "f68f550c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3146,7 +3146,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "420b24cd",
+   "id": "7bdfecf4",
    "metadata": {},
    "outputs": [
     {
@@ -3264,7 +3264,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "27e0213a",
+   "id": "b257612c",
    "metadata": {},
    "outputs": [
     {
@@ -3395,7 +3395,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "b24181b7",
+   "id": "afa4ca8f",
    "metadata": {},
    "outputs": [
     {
@@ -3469,7 +3469,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "29474458",
+   "id": "d84aa6bd",
    "metadata": {},
    "outputs": [
     {
@@ -3502,7 +3502,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "eb71f1a0",
+   "id": "6477af12",
    "metadata": {},
    "outputs": [
     {
@@ -3535,7 +3535,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "5cb54023",
+   "id": "c41b96cf",
    "metadata": {},
    "outputs": [
     {
@@ -3568,7 +3568,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "54a48580",
+   "id": "47eb4d04",
    "metadata": {},
    "outputs": [
     {
@@ -3601,7 +3601,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "76f179a9",
+   "id": "7cbd1efb",
    "metadata": {},
    "outputs": [
     {
@@ -3634,7 +3634,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "25943b7e",
+   "id": "3fbbf0f8",
    "metadata": {},
    "outputs": [
     {
@@ -3751,7 +3751,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "63202f1c",
+   "id": "e65ce0ec",
    "metadata": {},
    "outputs": [
     {
@@ -3772,7 +3772,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "33665cac",
+   "id": "3202f7df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3782,7 +3782,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "ca3e0ed3",
+   "id": "859253ad",
    "metadata": {},
    "outputs": [
     {
@@ -4245,7 +4245,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "ae1da4ca",
+   "id": "47ea097a",
    "metadata": {},
    "outputs": [
     {
@@ -4298,7 +4298,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "abbd4be1",
+   "id": "c7b2a320",
    "metadata": {},
    "outputs": [
     {
@@ -4330,7 +4330,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "48ecd484",
+   "id": "d75dbfad",
    "metadata": {},
    "outputs": [
     {
@@ -4369,7 +4369,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "e85a2d86",
+   "id": "4b4df71c",
    "metadata": {},
    "outputs": [
     {
@@ -4500,7 +4500,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "f4711f0a",
+   "id": "3d9bbd7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4510,7 +4510,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "53ab0058",
+   "id": "ba1b8a9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4524,7 +4524,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "a6fa633f",
+   "id": "57918f46",
    "metadata": {},
    "outputs": [
     {
@@ -5016,7 +5016,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "5259bf17",
+   "id": "0607d882",
    "metadata": {},
    "outputs": [
     {
@@ -5039,7 +5039,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "8c61276c",
+   "id": "6dc1532c",
    "metadata": {},
    "outputs": [
     {
@@ -5061,7 +5061,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "d138b497",
+   "id": "59de97f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5076,7 +5076,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "a64f8f22",
+   "id": "d02d6b32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5100,8 +5100,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 107,
+   "id": "b0ad4486",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "05aee98a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "7b313d3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1) \\\n",
+    "                .pivot(index='movieId',columns='rating', values='count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "c3300994",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts.columns = ['rating_' + str(col) for col in rating_counts.columns]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "7fe3c835",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_with_ratings_df = pd.merge(movies_df, rating_counts, left_on='kaggle_id', right_index=True, how='left')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "87fb93a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_with_ratings_df[rating_counts.columns] = movies_with_ratings_df[rating_counts.columns].fillna(0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6bb27ac8",
+   "id": "5a68614e",
    "metadata": {},
    "outputs": [],
    "source": []
